# nmeaOSMViewer

./: .gitignore  .gitmodules  CMakeLists.txt  OSMMap.cpp  OSMMap.h  OSMMap_d7.cpp  README.md  Settings.cpp  Settings.h  Tools.cpp  Tools.h  browserwindow.cpp  browserwindow.h  createResources.sh  gps.cpp  gps.h  gpsNMEA.cpp  gpsNMEA.h  main.cpp  resources.qrc
html/: index.html
html/css/: style.css
html/js/: mapManagement.js
